[package]
name = "fontgen"
version = "0.1.0"
authors = ["Darren Kaste <darrenkaste@gmail.com>"]
edition = "2018"

[dependencies]
clap = "^2.33.0"
png = "^0.16.1"
freetype-rs = "^0.24.0"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.48"
fontgen-export = { path = "../fontgen-export" }
